--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
         "semi": ["error", "always"],
         "quotes": ["error", "single"],
         "linebreak-style": ["error", "unix"],
-        "comma-dangle": ["error", "never"]
+        "comma-dangle": ["error", "never"],
+        "no-unreachable": ["off"]
     }
 }
