--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-redux": "^4.4.6"
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
